setup/k8s/hello-world-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-api
  namespace: hello-world-api
spec:
  selector:
    matchLabels:
      app: hello-world-api
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: hello-world-api
    spec:
      containers:
        - name: hello-world-api
          image:  topas56/hello-world-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              name: hello-world-api
          resources:
            requests:
              memory: "600Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "100m"
