setup/k8s/hello-world-api/ingress-prism.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-api
  namespace: hello-world-api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
    - secretName:  hello-world-api-tls-partner-api
      hosts:
        - domain.com
  rules:
    - host: domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-api
                port:
                  number: 8082
